# kivy-base-app

./: .gitignore  README.md  cookiecutter.json  project-tools.json
extra-modules/: get_ads.py  socketp2p.py
{{cookiecutter.repo_name}}/: .gitignore  README.md  app_config.py  buildozer.spec  config.ini  desktop.spec  main.py  main.spec  pyproject.toml  requirements.txt
{{cookiecutter.repo_name}}/buildtools/: __init__.py  create-installer.iss  pygettext.py
{{cookiecutter.repo_name}}/buildtools/xcode-visibleFrame/visibleFrame/: visibleFrame.m
{{cookiecutter.repo_name}}/buildtools/xcode-visibleFrame/visibleFrame.xcodeproj/: project.pbxproj
{{cookiecutter.repo_name}}/java/org/realpathutil/: RealPathUtil.java
{{cookiecutter.repo_name}}/kivy_base/: __init__.py
{{cookiecutter.repo_name}}/kivy_base/uix/: processwidget.py  textinput_ime.py
{{cookiecutter.repo_name}}/objc/: kivyadmob.h  kivyadmob.m
{{cookiecutter.repo_name}}/tests/: test_{{cookiecutter.repo_name}}app.py
{{cookiecutter.repo_name}}/utils/: __init__.py  app_config.py  msgfmt.py  platform.py  resolution.py  visibleFrame
{{cookiecutter.repo_name}}/utils/uix/: fb_widget.kv  textinput_ime.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/: app.py  main-layout.kv
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/data/: icon.icns
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/tools/: __init__.py  bug_reporter.kv  bug_reporter.py  language.py  show_fps.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/uix/: fb_widget.py  processwidget.py  uix.kv  uix.py
(+8 files in other folders)
